Changed Hoimepage link and removed unused variables

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MananKateshiya.github.io/gameFi-app",
+  "homepage": "https://manankateshiya.github.io/gameFi-app",
   "name": "recipe-app",
   "version": "0.1.0",
   "private": true,
